Stopped forcing vertical scrollbar onto view.

--- a/app/assets/stylesheets/dynamo/2_layouts/arlocal.scss
+++ b/app/assets/stylesheets/dynamo/2_layouts/arlocal.scss
@@ -1,13 +1,11 @@
 .arlocal {
   width: 100%;
   overflow-x: hidden;
-  overflow-y: scroll;
   min-height: 100vh;
 }
 .arlocal_admin {
   width: 100%;
   overflow-x: hidden;
-  overflow-y: scroll;
   min-height: 100vh;
 }
 
